# konaclaw

./: .gitignore  KonaClaw.command  KonaClawDashboard.command
docs/superpowers/plans/: 2026-05-02-kc-connectors.md  2026-05-02-kc-core.md  2026-05-02-kc-dashboard.md  2026-05-02-kc-mcp.md  2026-05-02-kc-memory.md  2026-05-02-kc-sandbox.md  2026-05-02-kc-supervisor.md  2026-05-02-kc-zapier.md  2026-05-04-kc-supervisor-v02-wiring.md  2026-05-06-kc-dashboard-v021-polish.md  2026-05-06-kc-supervisor-v021-polish.md  2026-05-08-news-api.md  2026-05-09-dashboard-tokens-per-second.md  2026-05-09-reminders-phase2.md  2026-05-09-reminders-scheduler-phase1.md  2026-05-10-reminders-phase3.md  2026-05-10-skills.md  (+8 more)
kc-attachments/: pyproject.toml
kc-attachments/src/kc_attachments/: __init__.py  capability.py  sniff.py  store.py  tools.py  wiring.py
kc-attachments/src/kc_attachments/parsers/: __init__.py  docx_parser.py  image_parser.py  pdf_parser.py  text.py  xlsx_parser.py
kc-attachments/tests/: test_capability.py  test_parsers_docx.py  test_parsers_image.py  test_parsers_pdf.py  test_parsers_text.py  test_parsers_xlsx.py  test_protocol.py  test_sniff.py  test_store.py  test_tools.py  test_wiring.py
kc-attachments/tests/fixtures/: hello.txt  sample.docx  sample.xlsx  utf8.txt
kc-connectors/: README.md  SMOKE.md  pyproject.toml
kc-connectors/src/kc_connectors/: _telegram_format.py  base.py  gcal_adapter.py  gmail_adapter.py  imessage_adapter.py  news_adapter.py  routing.py  secrets.py  telegram_adapter.py
kc-connectors/tests/: test_base.py  test_gcal.py  test_gmail.py  test_imessage.py  test_news.py  test_routing.py  test_telegram.py  test_telegram_format.py
kc-core/: README.md  SMOKE.md  pyproject.toml
kc-core/src/kc_core/: agent.py  cli.py  config.py  messages.py  ollama_client.py  stream_frames.py  tool_call_parser.py  tools.py
kc-core/tests/: conftest.py  test_agent.py  test_agent_image_sentinel.py  test_agent_send_stream_images.py  test_cli.py  test_config.py  test_messages.py  test_ollama_client.py  test_stream_frames.py  test_tool_call_parser.py  test_tools.py
kc-core/tests/fixtures/agents/: assistant.yaml  echo.yaml
kc-core/tests/live/: conftest.py  test_live_chat.py
kc-dashboard/: README.md  SMOKE.md  index.html  mockup.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
kc-dashboard/src/: App.tsx  index.css  main.tsx  test-setup.ts
kc-sandbox/: .gitignore  README.md  SMOKE.md  pyproject.toml
kc-sandbox/src/kc_sandbox/: approval.py  cli.py  journal.py  permissions.py  shares.py  tools.py  undo.py  wiring.py
kc-sandbox/tests/: conftest.py  test_approval.py  test_journal.py  test_permissions.py  test_shares.py  test_tools.py  test_undo.py  test_wiring.py
kc-sandbox/tests/fixtures/agents/: filebot.yaml
kc-shared/: pyproject.toml
kc-shared/src/kc_shared/: __init__.py  recall.py  store.py  tools.py  wiring.py
kc-shared/tests/: test_tools.py
kc-skills/: README.md  pyproject.toml
kc-skills/src/kc_skills/: __init__.py  frontmatter.py  skill_index.py  tools.py
kc-skills/tests/: test_frontmatter.py  test_skill_index.py  test_tools.py
kc-subagents/: pyproject.toml
kc-subagents/src/kc_subagents/: __init__.py  runner.py  templates.py  tools.py  trace.py
kc-subagents/src/kc_subagents/seeds/: __init__.py  coder.yaml  email-drafter.yaml  install.py  scheduler.yaml  web-researcher.yaml
kc-subagents/tests/: test_runner.py  test_seeds.py  test_smoke.py  test_templates.py  test_tools.py  test_trace.py
kc-supervisor/: README.md  SMOKE.md  pyproject.toml
kc-supervisor/src/kc_supervisor/: __main__.py  agents.py  approvals.py  assembly.py  at_mention.py  attachments_routes.py  audit_tools.py  connectors_routes.py  conversations.py  delegation.py  http_routes.py  inbound.py  locks.py  main.py  portfolio_routes.py  reminders_broadcaster.py  secrets_store.py  service.py  skill_slash.py  storage.py  tessy_tools.py  ws_routes.py
kc-supervisor/src/kc_supervisor/clarify/: __init__.py  broker.py  tools.py
kc-supervisor/src/kc_supervisor/scheduling/: __init__.py  constants.py  context.py  runner.py  service.py  timeparse.py  tools.py
kc-supervisor/src/kc_supervisor/todos/: __init__.py  storage.py  tools.py
kc-supervisor/tests/: conftest.py  test_agents.py  test_approvals.py  test_approvals_attribution.py  test_assembly.py  test_assembly_news.py  test_at_mention.py  test_attachments_message_injection.py  test_attachments_routes.py  test_audit_attribution.py  test_audit_denied.py  test_audit_tools.py  test_channel_routing_cli.py  test_clarify_broker.py  test_clarify_tool.py  test_connectors_routes.py  test_conversations.py  test_delegation.py  test_http.py  test_http_messages_scheduled_job_id.py  test_http_reminders.py  test_http_skills.py  test_http_subagents.py  test_http_todos.py  test_inbound.py  test_inbound_slash_command.py  test_locks.py  test_main_restart_hooks.py  test_main_subagents.py  test_news_route.py  test_phase2_integration.py  test_portfolio_routes.py  test_reminder_runner.py  test_reminders_broadcaster.py  test_schedule_rehydrate.py  test_scheduling_service.py  test_scheduling_storage.py  test_scheduling_tools.py  test_secrets_store.py  test_skill_slash.py  (+15 more)
kc-terminal/: pyproject.toml
kc-terminal/src/kc_terminal/: __init__.py  classifier.py  config.py  env.py  paths.py  runner.py  tools.py
kc-terminal/tests/: test_classifier.py  test_config.py  test_env.py  test_paths.py  test_runner.py  test_tool_integration.py
kc-web/: pyproject.toml
kc-web/src/kc_web/: __init__.py  budget.py  client.py  config.py  fetch.py  search.py  tools.py  truncate.py  url_guard.py
kc-web/tests/: test_budget.py  test_config.py  test_fetch.py  test_ollama_client.py  test_search.py  test_tool_integration.py  test_truncate.py  test_url_guard.py  test_web_client_error.py
workspace/: monte_carlo.py  portfolio.py  print_finances.py  stock.py  sync_holdings.py  tesla_price.py  update_tesla_from_screenshot.py  update_tesla_offers.py  update_tesla_pricing.py  ytd.py
workspace/tests/: test_smoke.py  test_tesla.py
(+123 files in other folders)
