[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kc-sandbox"
version = "0.1.0"
description = "KonaClaw sandbox: shares, permissions, undo"
requires-python = ">=3.11"
dependencies = [
    "kc-core",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kc_sandbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"
