[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kc-shared"
version = "0.1.0"
description = "KonaClaw shared folder: ~/Desktop/KonaShared/{originals,kona-edits} tools."
requires-python = ">=3.11"
dependencies = [
    "kc-core",
    "kc-attachments",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/kc_shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"
