[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kc-subagents"
version = "0.1.0"
description = "Ephemeral subagent spawning for KonaClaw"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0", "kc-core"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/kc_subagents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"
