[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kc-supervisor"
version = "0.1.0"
description = "KonaClaw supervisor — FastAPI service hosting agents"
requires-python = ">=3.11"
dependencies = [
    "kc-core",
    "kc-sandbox",
    "kc-web",
    "kc-subagents",
    "kc-shared",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "cryptography>=42",
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",
    "dateparser>=1.2",
    "croniter>=2.0",
    "cron-descriptor>=1.4",
    "tzlocal>=5.0",
]

[project.optional-dependencies]
connectors = ["kc-connectors"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "httpx-ws>=0.6",
    "respx>=0.21",
    "ruff>=0.4",
    "freezegun>=1.5",
]

[project.scripts]
kc-supervisor = "kc_supervisor.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kc_supervisor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"
