[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kc-web"
version = "0.1.0"
description = "KonaClaw web tools (Phase B of tools rollout): web_search + web_fetch via Firecrawl"
requires-python = ">=3.11"
dependencies = ["kc-core", "firecrawl-py>=1.0,<3.0", "httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/kc_web"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"
